# beatgrids

./: .gitignore  README.md  pyproject.toml
beatgrids/: __main__.py  analyzer.py  cli.py  detector.py  output.py  stretcher.py
docs/superpowers/plans/: 2026-03-29-beatgrids-plan.md
docs/superpowers/specs/: 2026-03-29-beatgrids-design.md
tests/: conftest.py  test_analyzer.py  test_cli.py  test_detector.py  test_integration.py  test_output.py  test_stretcher.py
